--- a/src/main/webapp/app/musicView/musicView.component.html
+++ b/src/main/webapp/app/musicView/musicView.component.html
@@ -13,5 +13,5 @@
 </div>
 
 <div class="audio-container">
-    <jhi-audio-player [selectedPlaylist]="selectedPlaylist" [isPlaylistPlaying]="isPlaylistPlaying"></jhi-audio-player>
+    <jhi-audio-player [selectedPlaylist]="selectedPlaylist"></jhi-audio-player>
 </div>
