next song option only if in playlist

--- a/src/main/webapp/app/musicView/audio-player/audio-player.component.html
+++ b/src/main/webapp/app/musicView/audio-player/audio-player.component.html
@@ -1,21 +1,21 @@
 <div class="audio-player">
   <div *ngIf="audioPlayerTrack" class="track-info">
     <img src="{{audioPlayerTrack.imagesurl}}" class="album-img"></img>
-    <div class="pad">
+    <div *ngIf="isPlaylistPlaying || !isSelected" class="pad">
       <span class="fa fa-backward" (click)="previousTrack()"></span>
     </div>
     <div class="pad">
-      <span class="revert-text">{{audioPlayerTrack.name.substring(0,12)}}{{audioPlayerTrack.name.length >= 12 ? '...' : ''}}</span>
+      <span class="revert-text">{{displayTrackInfo(audioPlayerTrack.name)}}</span>
     </div>
     <div class="divider"></div>
     <div class="pad">
-      <span class="revert-text">{{audioPlayerTrack.artist.substring(0,12)}}{{audioPlayerTrack.artist.length >= 12 ? '...' : ''}}</span>
+      <span class="revert-text">{{displayTrackInfo(audioPlayerTrack.artist)}}</span>
     </div class="pad">
     <div class="divider"></div>
     <div class="pad">
-      <span class="revert-text">{{audioPlayerTrack.album.substring(0,12)}}{{audioPlayerTrack.album.length >= 12 ? '...' : ''}}</span>
+      <span class="revert-text">{{displayTrackInfo(audioPlayerTrack.album)}}</span>
     </div>
-    <div class="pad">
+    <div *ngIf="isPlaylistPlaying || !isSelected" class="pad">
       <span class="fa fa-forward" (click)="nextTrack()"></span>
     </div>
   </div>
