--- a/src/main/webapp/app/musicView/music-sidebar/music-sidebar.component.html
+++ b/src/main/webapp/app/musicView/music-sidebar/music-sidebar.component.html
@@ -8,7 +8,7 @@
             <div [ngClass]="{ selectedLink: !selectedPlaylist }" class="menu-button text-left" (click)="browseMusic()">
                 <span class="fa fa-search"></span>
                 <span class="text">
-                    Browse
+                    Look for new music
                 </span>
             </div>
         </div>
