--- a/src/main/webapp/app/musicView/musicView.component.html
+++ b/src/main/webapp/app/musicView/musicView.component.html
@@ -7,7 +7,7 @@
             <jhi-search-music-view (newTrack)=selectTrack($event)></jhi-search-music-view>
         </div>
         <div [ngClass]="{hide: !selectedPlaylist}">
-            <jhi-playlist-view [playlist]="selectedPlaylist" (newTrack)=selectTrack($event)></jhi-playlist-view>
+            <jhi-playlist-view [playlist]="selectedPlaylist" (newTrack)=selectTrack($event) (getIsSearchMusic)="browseMusic($event)"></jhi-playlist-view>
         </div>
     </div>
 </div>
