--- a/src/main/webapp/app/musicView/search-music-view/search-music-view.component.html
+++ b/src/main/webapp/app/musicView/search-music-view/search-music-view.component.html
@@ -40,7 +40,7 @@
             <div class="add-track-container">
               <span class="fa fa-plus fa-lg" (click)="openDropdown($event, result)"></span>
               <ul *ngIf="result.id === selectedTrackId && showPlaylistDropdown">
-                <li *ngFor="let playlist of playlists" (click)="addToPlaylist($event, playlist, result)">{{playlist.name}}</li>
+                <li *ngFor="let playlist of playLists" (click)="addToPlaylist($event, playlist, result)">{{playlist.name}}</li>
               </ul>
             </div>
           </td>
